# a2a-manipulation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/experiments/: asch_classic_normative_smoke.yaml  asch_classic_smoke.yaml  conformity_causal_adaptivity_bedrock_haiku45_subject_gpt55_persuader.yaml  conformity_causal_adaptivity_openai_gpt4omini_subject_gpt55_persuader.yaml  conformity_causal_adaptivity_openai_gpt55_subject_gpt55_persuader.yaml  conformity_causal_livea2a_gpt4omini.yaml  conformity_causal_livea2a_haiku45.yaml  conformity_causal_livea2a_smoke.yaml  conformity_causal_powered_bedrock_deepseek.yaml  conformity_causal_powered_bedrock_haiku45.yaml  conformity_causal_powered_bedrock_llama31_8b.yaml  conformity_causal_powered_bedrock_llama33_70b.yaml  conformity_causal_powered_bedrock_mistral.yaml  (+38 more)
psychbench/: __main__.py  cli.py  config.py
scripts/: a2a_stats.py  causal_stats.py  make_a2a_figures.py  make_causal_tables.py  make_paper_figures.py  make_tables.py  network_analysis.py  probe_subagent_channel.py  run_cascade.py  run_openrouter_extra.sh  run_source_rationale.sh  run_unified_causal.sh  run_unified_matrix.sh
tables/: tables.tex  tables_causal.tex
tests/: test_agents.py  test_asch_classic.py  test_backends.py  test_causal.py  test_conformity_challenge.py  test_conformity_experiment.py  test_conformity_scoring.py  test_conformity_stimuli.py  test_conformity_tool.py  test_cost.py  test_dialogue.py  test_framework.py  test_human_benchmark.py  test_normative.py  test_panel.py  test_story.py  test_story_corpus.py  test_sweep.py
(+713 files in other folders)
