[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psychbench"
version = "1.0.0"
description = "Agent-to-Agent Manipulation Through Delegated Evidence — experiment code and data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Keegan Wang" }]
dependencies = [
    "PyYAML>=6.0",
    "litellm>=1.40",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["psychbench*"]

[tool.setuptools.package-data]
"psychbench.experiments.conformity" = ["corpus/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
